<resources>
    <string name="app_name">Apprentice</string>
    <string name="facebook_app_id">2025137434467305</string>
    <string name="fb_login_protocol_scheme">fb2025137434467305</string>
    <string name="Home">Home</string>
    <string name="Journey_List">Journey List</string>
    <string name="My_Profile">My Profile</string>
    <string name="About_us">About us</string>
    <string name="Logout">Logout</string>
    <string name="Chat">Chat</string>
    <string name="Settings">Settings</string>
    <string name="Others">Others</string>

    <string name="nume_utilizator">Nume utilizator</string>

    <string name="misiuni_in_asteptare">Misiuni in asteptare</string>
    <string name="misiuni_finalizate">Misiuni finalizate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Utilizator</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Info">Info</string>
    <string name="Bani">Bani</string>
    <string name="Stres">Stres</string>
    <string name="Job">Job</string>
    <string name="Start">Start</string>

    <string name="Start_Journey">Start Journey</string>
    <string name="message">Type a message</string>

    <string name="long_text">How are you doing? This is a long message that should probably wrap.</string>
    <string name="Rose">Rose</string>

    <string name="placeholder">Placeholder message</string>

    <string name="Title">Title</string>
    <string name="journey">"Afla mai multe detalii despre java si ce presupune acest Journey."</string>
    <string name="Descriere">Descriere</string>
    <string name="SignOut">Sign Out</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="SIGN_UP">SIGN UP</string>

    <string name="Easy">Easy</string>
    <string name="Easy_MockText">First steps...</string>

    <string name="Medium">Medium</string>
    <string name="Medium_MockText">Keep going !</string>

    <string name="Hard">Hard</string>
    <string name="Hard_MockText">On your way to the top</string>



    <string name="type_message">Type a message</string>

    <string name="Send">Send</string>
    <string name="logged_in">You are logged in !</string>


    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="fragment_overview_title">Introducere</string>
    <string name="fragment_overview_text1"> &#160;&#160; În prezent, Java este considerat unul dintre
cele mai puternice și importante limbaje de
programare de pe piață, putând fi utilizat în
aproape orice aplicații și având ca şi
caracteristică principală portabilitatea pe orice
sistem de operare . Este un limbaj de
programare high-level, orientat pe obiect şi cu
elemente de programare funcțională. </string>

    <string name="fragment_overview_text2"> &#160;&#160; Așadar trebuie să reținem următoarele caracteristici definitorii ale Java:\n
        - limbaj de programare OOP: rezultatele rulării sunt obținute în urma interacțiunii unor entități numite obiecte;\n
        - limbaj de programare procedural: este cel în cadrul căruia setul de instrucțiuni scris într-o anumită ordine formează un algoritm;\n
        - limbaj de programare independent de platformă: programele se execută indiferent de sitemul de operare cu care au fost compilate, deoarece în Java  programele sunt rulate de o masină virtuală, si nu de un sitem de operare.\n
\n
    &#160;&#160; Targetul de aplicații dezvoltate cu Java este reprezentat în general de aplicații business.</string>

    <string name="fragment_bani_title">Venit</string>
    <string name="fragment_bani_text"> &#160;&#160; Java va rămâne o primă opțiune pentru cei care doresc să învețe programare, mai ales dacă doresc să facă aplicații de Android.\n
    &#160;&#160; Este binecunoscut faptul că domeniul IT este unul foarte tenant din punct de vedere financiar şi că vine cu o mulţime de beneficii, cum ar fi programul flexibil şi orele suplimentare plătite dublu.\n
    &#160;&#160; Cât despre o sumă concretă şi orietativă, studii recente arată că salariul pentru un programator entry-level într-o companie de top porneşte de la 800-1.000 de euro, iar după 3-5 ani poate ajunge la un nivel de 3.000 de euro sau chiar şi mai mult, în funcţie de cât de solicitant este jobul sau de principiile companiei.</string>

    <string name="fragment_stres_title">Stres</string>
    <string name="fragment_stres_text1"> &#160;&#160; Programarea în general este un job stresant - ești presat de termene limită, de cerințe ce necesită o perioadă îndelungată de rezolvare.\n </string>
    <string name="fragment_stres_text2">
    &#160;&#160; Specialiştii spun că pentru a fi un bun programator și pentru a avea un bun management al stresului , trebuie să dispui de calităţi precum: </string>
    <string name="fragment_stres_text3">
     1.	Pasiune:  pentru că este un job solicitant care va deveni cu atât mai plăcut cu cât te implici mai mult şi cu cât munceşti din pasiune;\n
     2.	Răbdare:  pentru că pot să treacă zile întregi până rezolvi o anumită problemă;\n
     3.	Dorinţa de a învăţa constant lucruri noi:  succesul este garantat şi de dorinţa de a fi mereu la curent cu noile schimbări sau inovaţii din domeniu (totodată, este o metodă prin care niciodată nu o să consideri că ai un job monoton);\n
     4.	Abilităţi de analiză:  sunt esenţiale în rezolvarea problemelor;\n
     5.	Eficienţa muncii în echipă:  mai ales în cadrul proiectelor mari, trebuie să te integrezi cât mai uşor şi să cooperezi cât mai eficient cu colegii tăi pentru a garanta succesul echipei . </string>

    <string name="fragment_jobs_title">Jobs</string>
    <string name="fragment_jobs_text1"> &#160;&#160; Cele mai importante lucruri nu se întâmplă peste noapte - cu atât mai mult cele care sunt legate de cariera ta. Astfel, este total greşit  să crezi că vei reuși să înveți fără efort și în timp record un limbaj de programare care îți va aduce o poziție cheie într-o organizație și un salariu motivant pentru care nu trebuie să-ți faci griji mult timp de acum încolo. Este esenţial să fii perseverent.\n </string>
    <string name="fragment_jobs_text2">
        &#160;&#160; Câteva sfaturi de bază de care trebuie să ţii cont în cariera ta sunt: </string>
    <string name="fragment_jobs_text3">
         -	Nu o face pentru că trebuie, ci pentru că îţi place\n
         -	Fii curios, învaţă constant de la ceilalţi şi documentează-te la orice pas\n
         -	Concentrează-te să înţelegi şi să înveţi logic\n
         -	Learn by doing\n
         -	Nu renunţa, oricât de greu sau solicitant ar deveni, aminteşte-ţi de ce ai început\n
        -	Distrează-te </string>
    <string name="fragment_jobs_text4">
    &#160;&#160; Iată către ce tipuri de joburi te vei putea orienta atât la început, cât și pe parcurs, odată ce ai mai multă experiență:\n
       - Java Developer\n
       - Mobile Developer\n
       - Front-end Developer\n
       - Back-end Developer\n
\n
    &#160;&#160; O statistică recentă arată că în momentul de faţă, pe site-urile cu oportunităţi de angajare din România, sunt disponibile peste 1300 de joburi care se adresează programatorilor specializaţi în limbajul de programare Java, acestea fiind împărţite pe nivele de experienţă şi dificultate.</string>

    <string name="fragment_start_titlu">Start your journey</string>
    <string name="fragment_start_descriere"> &#160;&#160; În continure, vei găsi 3 categorii de dificultate : Easy, Medium, Hard. Fiecare categorie conține questuri pentru o anumită ramură a programării. \n\n
    &#160;&#160; Intrând pe un quest, vei găsi 3 cursuri diferite pe același topic. Fiecare are un anumit număr de steluțe, în funcție de durată și cost . \n\n
    &#160;&#160; După terminarea unuia sau a mai multor cursuri, acestea trebuie să fie validate (prin upload-area unei poze) pentru a putea primi numărul de steluțe aferent și astfel vei putea debloca următoarele questuri.\n\n
    </string>
    <string name="fragment_start_descriere2">MULTĂ  BAFTĂ !!!</string>

    <string name="chat_activity_title">Room - %s</string>


</resources>
