<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_jlist"
            android:title="@string/Journey_List"
            android:icon="@drawable/j_list"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/My_Profile" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/Chat" />
    </group>

    <item android:title="@string/Others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_us_24dp"
                android:title="@string/About_us" />
            <item
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:id="@+id/nav_logout"
                android:title="@string/Logout" />

        </menu>
    </item>


</menu>
