<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/Info"/>

    <item
        android:id="@+id/nav_bani"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/Bani"/>

    <item
        android:id="@+id/nav_stres"
        android:icon="@drawable/ic_stress"
        android:title="@string/Stres"/>

    <item
        android:id="@+id/nav_jobs"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/Job"/>

    <item
        android:id="@+id/nav_start"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/Start"/>
</menu>