<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1F2F3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewStresTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/com_facebook_likeboxcountview_border_width"
                android:gravity="center"
                android:padding="@dimen/cardview_default_elevation"
                android:text="@string/fragment_stres_title"
                android:textSize="60sp"
                tools:textColor="#333333" />

            <TextView
                android:id="@+id/TextViewStresText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:breakStrategy="balanced"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:padding="4dp"
                android:text="@string/fragment_stres_text1"
                android:textSize="16sp"
                tools:layout_margin="10dp"
                tools:textColor="#6A6A6A" />

            <ImageView
                android:id="@+id/img_stress"
                android:layout_width="wrap_content"
                android:layout_height="217dp"
                android:src="@drawable/stress_big"
                tools:background="#F1F2F3" />

            <TextView
                android:id="@+id/TextViewStresText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:breakStrategy="balanced"
                android:gravity="fill_horizontal"
                android:orientation="horizontal"
                android:padding="4dp"
                android:text="@string/fragment_stres_text2"
                android:textSize="16sp"
                tools:layout_margin="10dp"
                tools:textColor="#6A6A6A" />
            <TextView
                android:id="@+id/TextViewStresText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:breakStrategy="balanced"
                android:gravity="clip_horizontal"
                android:orientation="horizontal"
                android:padding="4dp"
                android:text="@string/fragment_stres_text3"
                android:textSize="16sp"
                tools:layout_margin="10dp"
                tools:textColor="#6A6A6A" />

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>