<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1F2F3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/com_facebook_likeboxcountview_border_width"
                android:padding="@dimen/cardview_default_elevation"
                android:text="@string/fragment_overview_title"
                android:textSize="60sp"
                tools:textColor="#333333" />

            <TextView
                android:id="@+id/TextViewOverviewText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:text="@string/fragment_overview_text1"
                tools:layout_margin="10dp"
                android:textSize="16sp"
                tools:textColor="#6A6A6A"
                android:orientation="horizontal"
                android:gravity="fill_horizontal"
                android:breakStrategy="balanced"/>

            <ImageView
                android:id="@+id/java_overview"
                android:layout_width="wrap_content"
                android:layout_height="216dp"
                android:src="@drawable/java_overview"
                tools:background="#F1F2F3" />

            <TextView
                android:id="@+id/TextViewOverviewText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:text="@string/fragment_overview_text2"
                tools:layout_margin="10dp"
                android:textSize="16sp"
                tools:textColor="#6A6A6A"
                android:orientation="horizontal"
                android:gravity="fill_horizontal"
                android:breakStrategy="balanced"/>

        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>