<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity"
    android:orientation="vertical">



    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/grad">


        <RelativeLayout
            android:id="@+id/rellay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/cirlce"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/profile" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center_horizontal"
            android:text="@string/nume_utilizator"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rellay1"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rellay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/linlay2"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@color/gradStart">

                <TextView
                    android:id="@+id/MA"
                    android:gravity="center"
                    android:text="@string/misiuni_in_asteptare"
                    android:background="@color/missWaiting"
                    android:layout_height="50dp"
                    android:layout_width="400dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"></ListView>

                <TextView
                    android:id="@+id/MF"
                    android:gravity="center"
                    android:text="@string/misiuni_finalizate"
                    android:background="@color/missFinished"
                    android:layout_height="50dp"
                    android:layout_width="400dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"></ListView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Logout"
                android:layout_below="@+id/linlay2"
                android:gravity="center"/>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>